@@ -5,6 +5,5 @@ LICENSE
 README
 META.yml                                 Module meta-data (added by MakeMaker)
 lib/WebDyne/Chain.pm
-lib/WebDyne/Chain/VERSION.pm
 lib/WebDyne/Chain/Constant.pm
 t/00-load.t
