@@ -31,17 +31,16 @@ use IO::File;
 
 #  Create the Makefile params in hash
 #
-my $prereq_hr;
+my ($prereq_hr, $version_from_fn);
 my %makefile=(
 
     NAME				     =>  __PACKAGE__,
-    VERSION_FROM			     =>  File::Spec->catfile(
+    VERSION_FROM			     =>  $version_from_fn=File::Spec->catfile(
 
 	'lib',
 	split(/::/, __PACKAGE__),
-	'VERSION.pm'
 
-       ),
+       ).'.pm',
 
     PREREQ_PM				     =>  do { $prereq_hr={
 
@@ -72,7 +71,8 @@ my %makefile=(
        },
 
     ($] <  5.005 ? () : (
-    
+
+        ABSTRACT_FROM			    =>  $version_from_fn,    
         AUTHOR				    =>  'Andrew Speer <andrew@webdyne.org>',
         
     )),
