@@ -43,7 +43,7 @@ use WebDyne::Base;
 #  Version information in a formate suitable for CPAN etc. Must be
 #  all on one line
 #
-$VERSION='1.003';
+$VERSION='1.050';
 
 
 #  Debug using WebDyne debug handler
